# ppt8

./: .gitignore  readme.md
assembler/: guess_number.ppt8  guess_number.ppt8a  main.cpp  test.ppt8a
bin2schema/: CMakeLists.txt  Makefile  main.cpp  paper_template copy.xml  paper_template.xml  table_template.xml  test.txt  test.xml
compiler/: CMakeLists.txt  main.cpp  name.cpp  name.hpp  parser.hpp  ppt8_std.cpp  ppt8_std.hpp  runtime.cpp  runtime.hpp  test.ppt8  token.cpp  token.hpp  token_type.cpp  token_type.hpp  tokenizer.cpp  tokenizer.hpp  tr.hpp  variable.cpp  variable.hpp
compiler/test/: test_db.ppt8
emulator/: CMakeLists.txt  build_dos.sh  main.cpp  run.py  test.py  tstring.hpp
emulator/command/: command.hpp
emulator/commands/: __template  _c_nop.hpp  c_add_mr.hpp  c_add_ms.hpp  c_add_mv.hpp  c_add_rm.hpp  c_add_rr.hpp  c_add_rs.hpp  c_add_rv.hpp  c_add_ss.hpp  c_add_sv.hpp  c_alloc.hpp  c_call.hpp  c_cmp_mm.hpp  c_cmp_mv.hpp  c_cmp_rm.hpp  c_cmp_rr.hpp  c_cmp_rv.hpp  c_cmp_sm.hpp  c_cmp_ss.hpp  c_cmp_sv.hpp  c_dec16_m.hpp  c_dec16_r.hpp  c_dec8_m.hpp  c_dec8_s.hpp  c_div_mr.hpp  c_div_ms.hpp  c_div_mv.hpp  c_div_rm.hpp  c_div_rr.hpp  c_div_rs.hpp  c_div_rv.hpp  c_div_ss.hpp  c_div_sv.hpp  c_inc16_m.hpp  c_inc16_r.hpp  c_inc8_m.hpp  c_inc8_s.hpp  c_int_m.hpp  c_int_r.hpp  (+89 more)
emulator/label/: label.cpp  label.hpp
emulator/memory/: memory.cpp  memory.hpp
emulator/register/: register.cpp  register.hpp
emulator/runtime/: runtime.cpp  runtime.hpp
emulator/std/: curses.hpp  functions.cpp  functions.hpp  std.cpp  std.hpp  tr.hpp
emulator/test/: bios.ppt8  guess_number.ppt8  pixel_test.ppt8  test.ppt8  test2.ppt8
programs/: guess_number.ppt8  guess_numbern.sch  hello_world.ppt8
